[gd_scene load_steps=56 format=3 uid="uid://bor7ed5uvupuo"]

[ext_resource type="Texture2D" uid="uid://cja3v2ksso3co" path="res://assets/mystic_woods/sprites/characters/player.png" id="1_8kwo7"]
[ext_resource type="Script" path="res://characters/player.gd" id="1_osapj"]
[ext_resource type="AudioStream" uid="uid://cukj12dsvafg1" path="res://assets/sounds/character/attack_knight.wav" id="3_gneol"]
[ext_resource type="AudioStream" uid="uid://ep3cjho08to8" path="res://assets/sounds/character/FootstepsStoneDirt1.wav" id="4_mxnuc"]
[ext_resource type="AudioStream" uid="uid://dp7iyyru70bq1" path="res://assets/sounds/character/FootstepsStoneDirt2.wav" id="5_lpoqk"]
[ext_resource type="AudioStream" uid="uid://dc12h4xbyg377" path="res://assets/sounds/character/FootstepsStoneDirt3.wav" id="6_p5b5l"]
[ext_resource type="AudioStream" uid="uid://7n0571bmie20" path="res://assets/sounds/character/FootstepsStoneDirt4.wav" id="7_1vjdr"]
[ext_resource type="AudioStream" uid="uid://dlf51ha2sjw1a" path="res://assets/sounds/character/HumanInjured1.wav" id="8_g307k"]
[ext_resource type="AudioStream" uid="uid://bcbn4cg4ecdef" path="res://assets/sounds/character/HumanInjured2.wav" id="9_7ex43"]
[ext_resource type="AudioStream" uid="uid://bvdjt5co8iaqg" path="res://assets/sounds/character/HumanInjured3.wav" id="10_vouha"]
[ext_resource type="AudioStream" uid="uid://6jmushxtivsh" path="res://assets/sounds/character/HumanInjured4.wav" id="11_gxcma"]
[ext_resource type="AudioStream" uid="uid://bgqmu0th6tgjr" path="res://assets/sounds/character/HumanInjured5.wav" id="12_qtg07"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ynre4"]
atlas = ExtResource("1_8kwo7")
region = Rect2(0, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8ivv"]
atlas = ExtResource("1_8kwo7")
region = Rect2(48, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0v1u8"]
atlas = ExtResource("1_8kwo7")
region = Rect2(96, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uy8i7"]
atlas = ExtResource("1_8kwo7")
region = Rect2(144, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3q8b2"]
atlas = ExtResource("1_8kwo7")
region = Rect2(0, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vm7yr"]
atlas = ExtResource("1_8kwo7")
region = Rect2(48, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4me1g"]
atlas = ExtResource("1_8kwo7")
region = Rect2(96, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0cvd"]
atlas = ExtResource("1_8kwo7")
region = Rect2(144, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8rib"]
atlas = ExtResource("1_8kwo7")
region = Rect2(0, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_whevt"]
atlas = ExtResource("1_8kwo7")
region = Rect2(48, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hmwfh"]
atlas = ExtResource("1_8kwo7")
region = Rect2(96, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4brqa"]
atlas = ExtResource("1_8kwo7")
region = Rect2(144, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pj2bn"]
atlas = ExtResource("1_8kwo7")
region = Rect2(0, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gh1t5"]
atlas = ExtResource("1_8kwo7")
region = Rect2(48, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ncnsj"]
atlas = ExtResource("1_8kwo7")
region = Rect2(96, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kx07f"]
atlas = ExtResource("1_8kwo7")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ul5qr"]
atlas = ExtResource("1_8kwo7")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2x5c1"]
atlas = ExtResource("1_8kwo7")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_unahk"]
atlas = ExtResource("1_8kwo7")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_elyla"]
atlas = ExtResource("1_8kwo7")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d13iv"]
atlas = ExtResource("1_8kwo7")
region = Rect2(240, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_476ur"]
atlas = ExtResource("1_8kwo7")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_w35o8"]
atlas = ExtResource("1_8kwo7")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkh7t"]
atlas = ExtResource("1_8kwo7")
region = Rect2(96, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ph8n"]
atlas = ExtResource("1_8kwo7")
region = Rect2(144, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1h6tx"]
atlas = ExtResource("1_8kwo7")
region = Rect2(192, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r1u1"]
atlas = ExtResource("1_8kwo7")
region = Rect2(240, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_226sh"]
atlas = ExtResource("1_8kwo7")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lqa7m"]
atlas = ExtResource("1_8kwo7")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8tyel"]
atlas = ExtResource("1_8kwo7")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1eey2"]
atlas = ExtResource("1_8kwo7")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jobun"]
atlas = ExtResource("1_8kwo7")
region = Rect2(192, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0107"]
atlas = ExtResource("1_8kwo7")
region = Rect2(240, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0edcm"]
atlas = ExtResource("1_8kwo7")
region = Rect2(0, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_13e1y"]
atlas = ExtResource("1_8kwo7")
region = Rect2(48, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_84am6"]
atlas = ExtResource("1_8kwo7")
region = Rect2(96, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_64wh0"]
atlas = ExtResource("1_8kwo7")
region = Rect2(144, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ub4hq"]
atlas = ExtResource("1_8kwo7")
region = Rect2(192, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6l7jm"]
atlas = ExtResource("1_8kwo7")
region = Rect2(240, 240, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_l27gc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ynre4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8ivv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0v1u8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uy8i7")
}],
"loop": true,
"name": &"attacking",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3q8b2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vm7yr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4me1g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0cvd")
}],
"loop": true,
"name": &"attacking_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8rib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_whevt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hmwfh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4brqa")
}],
"loop": true,
"name": &"attacking_up",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pj2bn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gh1t5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ncnsj")
}],
"loop": false,
"name": &"death",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kx07f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ul5qr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2x5c1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_unahk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_elyla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d13iv")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_476ur")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w35o8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkh7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ph8n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1h6tx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r1u1")
}],
"loop": true,
"name": &"walking",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_226sh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqa7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8tyel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1eey2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jobun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0107")
}],
"loop": true,
"name": &"walking_down",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0edcm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_13e1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_84am6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_64wh0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ub4hq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6l7jm")
}],
"loop": true,
"name": &"walking_up",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cmxr6"]
size = Vector2(32, 48)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_we2uw"]
streams_count = 4
stream_0/stream = ExtResource("4_mxnuc")
stream_0/weight = 1.0
stream_1/stream = ExtResource("5_lpoqk")
stream_1/weight = 1.0
stream_2/stream = ExtResource("6_p5b5l")
stream_2/weight = 1.0
stream_3/stream = ExtResource("7_1vjdr")
stream_3/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ccfm7"]
streams_count = 5
stream_0/stream = ExtResource("8_g307k")
stream_0/weight = 1.0
stream_1/stream = ExtResource("9_7ex43")
stream_1/weight = 1.0
stream_2/stream = ExtResource("10_vouha")
stream_2/weight = 1.0
stream_3/stream = ExtResource("11_gxcma")
stream_3/weight = 1.0
stream_4/stream = ExtResource("12_qtg07")
stream_4/weight = 1.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
z_index = 100
collision_layer = 2
collision_mask = 5
motion_mode = 1
script = ExtResource("1_osapj")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_l27gc")
animation = &"attacking"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_cmxr6")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_cmxr6")

[node name="Sounds" type="Node" parent="."]

[node name="AttackSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("3_gneol")
volume_db = -15.0

[node name="FootstepSounds" type="AudioStreamPlayer" parent="Sounds"]
stream = SubResource("AudioStreamRandomizer_we2uw")
volume_db = -32.0

[node name="InjuredSounds" type="AudioStreamPlayer" parent="Sounds"]
stream = SubResource("AudioStreamRandomizer_ccfm7")
volume_db = -15.0
